# franka_interface_ros1

./: .gitignore  CMakeLists.txt  README.md  ati_telnet.expect  kill.sh  melodic.rosinstall  package.xml  plugin.xml  requirements.txt  reset.sh  robot.bash  setup.bash  setup.py
config/: cam.rviz  franka_control.yaml  panda_arm.urdf.xacro
include/: cartesian_pose_interface.h  cartesian_state_interface.h  cartesian_vel_interface.h  joint_pose_interface.h  print_pose.h
launch/: cam_monitor.launch  franka_control.launch  start_camera.launch  start_gelsight.launch  start_robot.launch  start_ultrasound.launch
msg/: BrightnessStamped.msg
results/: airplane0_v0.points.csv  airplane0_v0.traj.csv  airplane0_v1.points.csv  airplane0_v1.traj.csv  airplane0_v2.points.csv  airplane0_v2.traj.csv  airplane1_v0_points.csv  airplane1_v0_traj.csv  airplane1_v1_points.csv  airplane1_v1_traj.csv  airplane1_v2_points.csv  airplane1_v2_traj.csv  airplane1_v3_points.csv  airplane1_v3_traj.csv  airplane1_v4_points.csv  airplane1_v4_traj.csv  airplane1_v5_points.csv  airplane1_v5_traj.csv  airplane1_v6_points.csv  airplane1_v6_traj.csv  airplane2_v0_points.csv  airplane2_v0_traj.csv  airplane2_v1_points.csv  airplane2_v1_traj.csv  airplane3_v0_points.csv  airplane3_v0_traj.csv  airplane3_v1_points.csv  airplane3_v1_traj.csv  airplane3_v2_points.csv  airplane3_v2_traj.csv  airplane3_v3_points.csv  airplane3_v3_traj.csv  airplane3_v4_points.csv  airplane3_v4_traj.csv  airplane3_v5_points.csv  airplane3_v5_traj.csv  airplane4_v0_points.csv  airplane4_v0_traj.csv  airplane4_v1_points.csv  airplane4_v1_traj.csv  (+54 more)
results/test/: airplane_v0.csv  airplane_v1.csv  airplane_v2.csv  allie_test_v0.points.csv  allie_test_v0.traj.csv  allie_test_v1.points.csv  allie_test_v1.traj.csv  allie_test_v2.points.csv  allie_test_v2.traj.csv  allie_test_v3.points.csv  allie_test_v3.traj.csv  max_test2_v0.csv  max_test2_v1.csv  max_test_v0.csv  max_test_v1.csv
scripts/: conditional_brightness  gelsight_publisher  go_vel  gui  img2traj.py  lamp_brightness  random_listener  replay_txt  replay_txt_feedback  ultrasound_publisher.py  ultrasound_subscriber  utils.py
src/: cartesian_pose_interface.cpp  cartesian_state_interface.cpp  cartesian_vel_interface.cpp  joint_pose_interface.cpp
srv/: GetStartState.srv  JointCmd.srv  PoseCmd.srv  UpdateState.srv  UpdateVel.srv  VelCmd.srv
